--- a/pharmacology.html
+++ b/pharmacology.html
@@ -50,7 +50,8 @@ Answer: <p style="color:white">A About one fifth of the iodides ingested with fo
 </form> 
 Answer: <p style="color:white">A A drug administered subcutaneously will initially be located primarily in the extracellular fluid. In order to be absorbed, the drug must enter the general circulation; that is, it must cross the capillary wall. Capillaries have very wide fenestrae that permit the passage of molecules with a molecular weight as high as 30,000 daltons (D). Therefore, most drugs given by the subcutaneous or intramuscular routes will enter the general circulation by bulk flow transport (or filtration; also known as solvent drag) through capillary fenestrae. Moreover, insulin is a protein with a molecular weight of about 6000 D, so it cannot cross the capillary wall by lipid or aqueous diffusion through aquaporins (water channels) of cell membranes. Bulk flow transport is a passive process and is directly proportional to the pressure gradient across the capillary wall. It does not depend on the structure of the drug but only on its molecular size (both lipid- and water-soluble drugs can be filtered provided the molecule is not too large).<br>
 B See correct answer explanation. C–E Facilitated diffusion, endocytosis, and active transport do not seem to be involved in the absorption of insulin from the site of injection. </p><br>
-17-year-old boy took a tablet of naproxen for a headache. Naproxen is a weak acid with a pKa of 5.2. What percentage of the drug was most likely water soluble in the patient’s plasma?<br>
+<br>
+  A 17-year-old boy took a tablet of naproxen for a headache. Naproxen is a weak acid with a pKa of 5.2. What percentage of the drug was most likely water soluble in the patient’s plasma?<br>
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. 1% </label><br>
@@ -83,7 +84,70 @@ Answer: <p style="color:white"> <table style="color:white">
     <td>50%</td>
   </tr>
   </table></style></p>
-  <i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
+<br>A 63-year old man recently diagnosed with hypertension started a therapy with hydrochlorothiazide, one tablet daily. Hydrochlorothiazide is an acidic drug with a pKa of about 9. Which of the following parts of the digestive tract most likely represents the main site of absorption of that drug?<br>
+ <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Oral mucuosa</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Stomach</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Small intestine</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Colon</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Rectum</label><br> 
+</form> 
+Answer: <p style="color:white"> C All drugs given by the oral route are primarily absorbed by the small intestine. This is because of the very large surface area of the small intestine, which is about 250 m2 and represents about 80% of the total area of the gastrointestinal tract. Hydrochlorothiazide is an acidic drug with a pKa of about 9, so it will be more lipid soluble in the stomach (where the pH is less than 2) than in the small intestine (where the pH is around 7). Nevertheless, absorption will take place mainly in the small intestine because of its enormous absorptive surface area.<br>
+A Because a drug given orally is swallowed, the oral mucosa does not contribute to absorption.<br>
+B, D, E See correct answer explanation.<br></p>
+The pharmacokinetic properties of five new drugs (P, Q, R, S, and T) were studied in healthy volunteers. The same dose of each drug was administered intravenously (IV) and orally to the same subject on two separate occasions. The results were the following:<br>
+<table>
+  <tr>
+    <th>Drug</th>
+    <th>AUC<sub>oral</sub> (mg h/L)</th>
+    <th>AUC<sub>IV</sub> (mg h/L)</th>
+  </tr>
+  <tr>
+    <td>P</td>
+    <td>50</td>
+    <td>600</td>
+  </tr>
+  <tr>
+    <td>Q</td>
+    <td>200</td>
+    <td>2000</td>
+  </tr>
+  <tr>
+  <td>R</td>
+  <td>30</td>
+  <td>400</td>
+  </tr>
+  <tr>
+  <td>S</td>
+  <td>100</td>
+  <td>120</td>
+  </tr>
+  <tr>
+  <td>T</td>
+  <td>45</td>
+  <td>90</td>
+</table><br>
+Which of the following drugs most likely has the highest oral bioavailability?
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. P</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Q</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. R</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. S</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. T</label><br> 
+</form> 
+Answer: <p style="color:white"> D Oral bioavailability is measured by the ratio AUC<sub>Oral</sub>/AUC<sub>IV</sub>. Drug S gives an oral bioavailability of 0.83, the highest of all the listed drugs.<br>
+A–C, E See correct answer explanation.<br></p>
+<i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
 <i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
   <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
    A 34-year-old man on vacation in Mexico was admitted to the hospital because of vomiting, double vision, and muscular paralysis. The man reported that he had eaten some canned food from a local vendor the previous day. After a physical examination, a presumptive diagnosis of botulism was made. It is known that botulinum toxin causes paralysis by getting inside the axon terminals of motor nerves, where it inhibits the release of acetylcholine. Botulinum toxin is a protein with a molecular weight greater than 100,000 daltons. Which of the following permeation processes most likely accounts for the transfer of the toxin through the nerve cell membrane?<br>
@@ -100,9 +164,25 @@ Answer: <p style="color:white"> <table style="color:white">
   <label for="other"> E. Filtration</label><br>
 </form> 
 Answer: <p style="color:white"> D Very large molecules cannot permeate cell membranes by diffusion or filtration. The only way they can cross cell membranes is by endocytosis, a process by which a substance is bound to the cell surface, engulfed by the cell membrane, and carried into the cytosol, where the substance can be released by breakdown of the vesicle membrane.</p><br>
-  <i> adverse effects of drugs on multisystem disorders: drug-induced electrolyte abnormalities
-and acid base-disorders (eg, albuterol; prednisone; diuretics; alcohol; drugs inducing
-   polydipsia, SIADH, or diabetes insipidus)</i><br>
+ A 69-year-old woman was brought to a local hospital emergency department by her son, who reported that his mother was found lethargic, disoriented, and combative a few hours earlier. Additional history revealed that she had ingested a large number of aspirin tablets in a suicide attempt. An appropriate therapy was instituted, which included the administration of sodium bicarbonate to increase the elimination of salicylate. Which of the following best explains the mechanism of this increased elimination?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Decreased tubular active transport of salicylate</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Decreased renal biotransformation of salicylate</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Decreased bioavailability of salicylate</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Urinary ion trapping of salicylate</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Increased glomerular filtration of salicylate</label><br>
+</form> 
+Answer: <p style="color:white"> D Aspirin is an acidic drug. As a rule, the excretion of an acidic drug can be accelerated by alkalinizing the urine, because an acidic drug dissociates to its charged, polar form in alkaline solution. This form, being water soluble, is “trapped” in the tubular lumen and cannot be transported back into the blood across the renal tubular cells. Conversely, the urinary excretion of a weak base may be accelerated by acidifying the urine.<br>
+A Salicylates do not undergo active transport.<br>
+B Salicylate biotransformation by the kidney is negligible.<br>
+C Aspirin was already absorbed, so bioavailability is not relevant.<br>
+E Glomerular filtration of a drug is strictly related to the renal glomerular filtration rate (GFR). It is very rare for drugs to significantly increase GFR.<br></p>
+<i> adverse effects of drugs on multisystem disorders: drug-induced electrolyte abnormalities
+and acid base-disorders (eg, albuterol; prednisone; diuretics; alcohol; drugs inducing polydipsia, SIADH, or diabetes insipidus)</i><br>
   <i> Mechanisms of drug interactions</i><br>
   An 85-year-old man was recently admitted to a nursing facility. Diseases listed in his medical record on admission were depression with anxiety symptoms, atrial fibrillation, chronic obstructive pulmonary disease, and osteoarthritis. Medications taken orally by the patient included the following:<br>
 Sertraline (base, pKa = 9.5)<br>
