--- a/pharmacology.html
+++ b/pharmacology.html
@@ -148,6 +148,23 @@ Which of the following drugs most likely has the highest oral bioavailability?
 Answer: <p style="color:white"> D Oral bioavailability is measured by the ratio AUC<sub>Oral</sub>/AUC<sub>IV</sub>. Drug S gives an oral bioavailability of 0.83, the highest of all the listed drugs.<br>
 A–C, E See correct answer explanation.<br></p>
 <i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
+During a phase 1 clinical trial, four different oral dosage forms of the same dose of a drug were administered to a healthy volunteer on four separate occasions. The plasma concentration–time curves are plotted below.<br>
+<img src="pharmacology1.png"><br>
+Which of the following features best explains why formulation W produces the largest plasma concentration–time curve of the drug?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Highest absorption through gut wall</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Lowest first-pass effect</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Lowest hepatic clearance</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Highest volume of distribution</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Lowest drug elimination</label><br>
+</form> 
+Answer: <p style="color:white"> A The amount of drug reaching the portal circulation after oral administration can be strongly influenced by the dosage formulation. Because only single molecules of the drug can pass through the gut wall, the drug must be in solution in order to enter the intestinal epithelial cells. For example, a tablet must be disintegrated and dissolved before reaching the portal circulation. The efficiency of this process depends on several factors, including the way the tablet is manufactured and the excipients used. Once in the portal circulation, the drug can be metabolized by the liver, but the hepatic clearance will be the same, regardless of the different dosage forms. Because in this case the same dose of the drug was administered, the concentration of the drug in the portal vein will be directly proportional to the oral bioavailability of the different formulations, which is indicated by the different AUCs depicted in the figure.
+<br>B–D See correct answer explanation.<br>
+</p>
 <i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
   <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
    A 34-year-old man on vacation in Mexico was admitted to the hospital because of vomiting, double vision, and muscular paralysis. The man reported that he had eaten some canned food from a local vendor the previous day. After a physical examination, a presumptive diagnosis of botulism was made. It is known that botulinum toxin causes paralysis by getting inside the axon terminals of motor nerves, where it inhibits the release of acetylcholine. Botulinum toxin is a protein with a molecular weight greater than 100,000 daltons. Which of the following permeation processes most likely accounts for the transfer of the toxin through the nerve cell membrane?<br>
