--- a/pharmacology.html
+++ b/pharmacology.html
@@ -165,8 +165,75 @@ Which of the following features best explains why formulation W produces the lar
 Answer: <p style="color:white"> A The amount of drug reaching the portal circulation after oral administration can be strongly influenced by the dosage formulation. Because only single molecules of the drug can pass through the gut wall, the drug must be in solution in order to enter the intestinal epithelial cells. For example, a tablet must be disintegrated and dissolved before reaching the portal circulation. The efficiency of this process depends on several factors, including the way the tablet is manufactured and the excipients used. Once in the portal circulation, the drug can be metabolized by the liver, but the hepatic clearance will be the same, regardless of the different dosage forms. Because in this case the same dose of the drug was administered, the concentration of the drug in the portal vein will be directly proportional to the oral bioavailability of the different formulations, which is indicated by the different AUCs depicted in the figure.
 <br>B–D See correct answer explanation.<br>
 </p>
+A 26-year-old man became inebriated after drinking several glasses of alcoholic beverages at a party. Ethanol is a polar, nonionizable drug with an approximate molecular weight of 46 daltons. Which of the following permeation processes mediated the man’s intestinal absorption of ethanol?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Aqueous diffusion</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Bulk flow transport</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Facilitated diffusion</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Active transport</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Endocytosis </label><br> 
+</form> 
+Answer: <p style="color:white"> A Being a polar drug, ethanol is readily water soluble. Because its molecular weight is small, it can cross cell membranes by aqueous diffusion through aquaporins.
+B–E See correct answer explanation.<br></p>
+A 67-year-old woman recently diagnosed with atrial fibrillation started treatment with atenolol, 100 mg/d. With this dose, the percentage of atenolol bound to plasma proteins is about 5%. Which of the following would have been the bound percentage of atenolol if a dose of 50 mg/d had been administered to the same patient?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 2.5%</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 5%</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 10%</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 1.25%</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 2%</label><br> 
+</form> 
+Answer: <p style="color:white">B Drugs bind primarily to albumin (if acidic) or to α1 acid glycoprotein (if basic).The extent to which drugs are bound to protein is highly variable (e.g., 0% for lithium, 99% for warfarin). Drugs ordinarily bind to protein in a reversible fashion and in dynamic equilibrium, according to the law of mass action, as shown by the equation
+<br>
+[Free drug] + [Protein] ⇄ [Drug–protein complex]
+<br>
+Mass action kinetics predicts that a constant percentage of the drug is bound; therefore, binding is independent of the dose (i.e., the kinetics of binding is first order).
+<br>
+A, C–E See correct answer explanation.<br> </p>
 <i> Individual factors altering pharmacokinetics and pharmacodynamics (eg, age, gender, disease, tolerance, compliance, body weight, metabolic proficiency, pharmacogenetics)</i><br>
-  <i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
+A 44-year-old man took a large dose of acetaminophen in aqueous solution to treat an excruciating headache. Two hours later, the pain was not diminished. Because acetaminophen should be effective in about 30 minutes after its oral administration, which of the following conditions most likely delayed the oral absorption of the drug in this patient?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. A moderate increase in intestinal peristalsis</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. The presence of strong pain</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. The administration of the drug in aqueous solution</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. A large volume of the distribution of the drug</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. A very low clearance of the drug</label><br> 
+</form> 
+Answer: <p style="color:white"> B Strong pain can substantially decrease gastric emptying, likely because of the activation of the sympathetic nervous system. Because the absorption of drugs by the stomach is very small, gastric emptying is a major factor influencing the rate of intestinal drug absorption, and its decrease can significantly delay this absorption.
+<br>A, C These factors usually speed up, not delay, the intestinal absorption of drugs.
+<br>D, E The distribution and elimination (clearance) of drugs have nothing to do with absorption.</p>
+A 22-year-old woman was admitted to the emergency department after a car accident. The woman had extensive brain trauma and multiple fractures. She complained of severe pain, and the attending physician planned to administer morphine. The physician knew that the dose should be carefully titrated because the entry of morphine into the patient’s central nervous system (CNS) was most likely higher than normal. Which of the following factors is most likely to have increased morphine entry into the CNS of this patient?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. The high first-pass effect of the drug</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. The brain trauma of the patient</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. The young age of the patient</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. The low clearance of the drug</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. The high ionization of the drug</label><br>
+</form> 
+Answer: <p style="color:white">B The permeability of the blood–brain barrier can be increased by several factors. Damage to the brain by any cause (trauma, infections, tumors, metabolic disorders, cerebrovascular disorders) is one of the most common causes of increased blood–brain barrier permeability.
+<br>A, D The first-pass effect is related to the bioavailability of a drug. Clearance is related to the elimination of a drug. Passage into the brain is related to the distribution of the drug. Bioavailability, distribution, and elimination are independent processes.
+<br>C The permeability of the blood–brain barrier is physiologically increased only in the fetus and the newborn.<br>
+E The high ionization of the drug decreases, not increases, the drug entry into the brain.<br> </p>
+<i> Mechanisms of drug adverse effects, overdosage, toxicology</i><br>
    A 34-year-old man on vacation in Mexico was admitted to the hospital because of vomiting, double vision, and muscular paralysis. The man reported that he had eaten some canned food from a local vendor the previous day. After a physical examination, a presumptive diagnosis of botulism was made. It is known that botulinum toxin causes paralysis by getting inside the axon terminals of motor nerves, where it inhibits the release of acetylcholine. Botulinum toxin is a protein with a molecular weight greater than 100,000 daltons. Which of the following permeation processes most likely accounts for the transfer of the toxin through the nerve cell membrane?<br>
 <form>
   <input type="radio" id="A" name="1" value="A">
