--- a/pharmacology.html
+++ b/pharmacology.html
@@ -147,6 +147,38 @@ Which of the following drugs most likely has the highest oral bioavailability?
 </form> 
 Answer: <p style="color:white"> D Oral bioavailability is measured by the ratio AUC<sub>Oral</sub>/AUC<sub>IV</sub>. Drug S gives an oral bioavailability of 0.83, the highest of all the listed drugs.<br>
 A–C, E See correct answer explanation.<br></p>
+A 34-year-old man recently diagnosed with grand mal epilepsy started treatment with valproic acid, an antiseizure drug with a pKa of 5. What percentage of the drug was most likely lipid soluble in the patient’s duodenal lumen (assuming pH = 7 in the lumen)?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 1%</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 24%</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 50%</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 76%</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 99%</label><br> 
+</form> 
+Answer: <p style="color:white"> Use the Henderson-Hasselbalch equation: <br>
+  Weak acid = log (HA/A<sup>-</sup>) = pK<sub>a</sub> -pH<br>
+  Therefore the proportion of ionized drug is A<sup>-</sup>/total = 0.99%<br> and the unionized, lipid-soluble form is 1%.</p>
+A 4-year-old boy suffering from acute lymphoblastic leukemia was about to receive an intrathecal injection of methotrexate, a drug that cannot cross the blood–brain barrier. Which of the following statements best explains why several drugs, including methotrexate, cannot easily enter the brain?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. CSF pressure is lower than cerebral perfusion pressure </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. The pH of CSF is lower than plasma pH </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Many drugs are bound to protein and cannot cross brain capillaries</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Endothelial cells of brain capillaries and choroid plexus have tight junctions</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Most drugs are completely ionized in blood.</label><br> 
+</form> 
+Answer: <p style="color:white"> D Drugs may enter the central nervous system (CNS) by crossing the cerebral capillaries (i.e., from plasma to the extracellular fluid [ECF]) or by crossing the choroid plexus (i.e., from plasma to the cerebrospinal fluid [CSF]). The composition of CSF is essentially the same as that of brain ECF, and there appears to be free communication between the brain ECF and CSF. In both of these cases, the drug must cross the blood–brain barrier (BBB). The main reasons that this barrier limits the transfer of drugs into the CNS are (1) endothelial cells of brain capillaries are connected to each other by occluding zonulae and do not have fenestrae, and (2) epithelial cells of the choroid plexus are connected by occluding zonulae.<br>
+A, B These statements are correct, but they do not explain the low drug permeability of the blood–brain barrier.<br>
+C Drugs are variably bound to plasma proteins; because the bound and free drugs are in equilibrium, even very extensively bound drugs can appreciably enter the brain.<br>
+E Very few drugs are completely ionized in the blood.<br></p>
 <i> Concentration and dose-effect relationships (eg, efficacy, potency), types of agonists (eg, full, partial, inverse) and antagonists and their actions</i><br>
 During a phase 1 clinical trial, four different oral dosage forms of the same dose of a drug were administered to a healthy volunteer on four separate occasions. The plasma concentration–time curves are plotted below.<br>
 <img src="pharmacology1.png"><br>
