--- a/microbiology.html
+++ b/microbiology.html
@@ -6,7 +6,7 @@
 <h1><center>Microbiology</center></h1>
   <br>
   <h2>Microbial biology</h2><br>
-  Microbial identification and classification, including principles, microorganism identification, and non-immunologic laboratory diagnosis<br>
+  <h3>Microbial identification and classification, including principles, microorganism identification, and non-immunologic laboratory diagnosis<br></h3>
   <b>Bacteria</b><br>
   <i>Structure (eg, cell walls, composition, appendages, virulence factors, extracellular products, toxins, mechanism of action of toxins)</i><br>
   <i>Diseases: brucellosis (Brucella spp); leptospirosis (Leptospira interrogans); Lyme disease
@@ -15,7 +15,114 @@
 tularensis); toxic shock syndrome; Q fever (Coxiella burnetii); anaplasmosis and
 ehrlichiosis (Anaplasma and Ehrlichia species); rickettsiosis (Rocky Mountain
     spotted fever [Rickettsia rickettsii])</i><br>
-  <i>Processes, replication, and genetics (eg, metabolism, growth, and regulation)</i><br>
+ A 36-year-old male presents to his primary care physician with a cough of 4 weeks duration. The cough is paroxysmal, and he sometimes vomits after coughing. Two other people with whom he works have a similar cough. The patient works at a local automobile assembly plant; he is married with a 2-year-old child; and he has no history of cigarette smoking.<br>
+
+On physical examination, the patient initially appears in no acute distress, then experiences a severe coughing attack, which leaves him weak and out of breath. Examination of the head, eyes, ears, nose, and throat (HEENT) revealed a small conjunctival hemorrhage on the left, and several petechiae were noted on the face. Lungs were clear to auscultation. The remainder of the physical examination was benign.<br>
+
+Laboratory studies were obtained, and the complete blood count (CBC) with differential showed a white blood cell (WBC) count of 8,000/ul with a normal differential. Posterior–anterior (PA) and lateral chest X-rays were also obtained and found to be normal.<br>
+
+The physician obtains a nasopharyngeal aspirate that was sent to the microbiology laboratory for Gram stain and culture. An organism not typical for oral-pharyngeal flora and presumed to be the causative pathogen grew on Regan–Lowe agar after overnight incubation at 37°C. The Gram stain is shown in the following figure. A confirmatory direct fluorescent antibody (DFA) staining of the organism isolated from the aspirate was also positive.<br>
+<img src="microbiology1.png"><br>
+Which of the following organisms is the most likely causative agent?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. <i>Bordetella pertussis</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Haemophilus influenzae</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Klebsiella pneumoniae </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Legionella pneumophila</label><br>
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Pseudomonas aeruginosa</i></label><br>
+</form> 
+Answer: <p style="color:white"> This case describes whooping cough, or Bordetella pertussis infection. B. pertussis is a fastidious gram-negative coccobacillus that primarily infects children and unvaccinated susceptible individuals. The presentation of pertussis is separated into three stages: the catarrhal phase, which appears as a typical upper respiratory tract infection; the paroxysmal phase, which presents with intense coughing jags and frequently the classic whooping sound of inspiration against a partially closed airway, post-tussive emesis is often seen; and the convalescent phase, which has a chronic cough that can last for weeks. In adults, particularly those who were previously immunized, the classic symptoms such as coughing paroxysms, the whooping sound, and post-tussive emesis may not be seen. The presence of the classic symptoms typically indicates an unvaccinated or undervaccinated individual. In children, a high WBC count (often > 20,000) is seen with a lymphocytosis frequently over 50%. Seeing a young child with a cough and high WBC with significant lymphocytosis is often a diagnostic clue for pertussis. In adults, however, the elevated WBC is rare, and lymphocytosis is generally not seen.<br>
+
+B Haemophilus influenzae is incorrect because infections do not present with a paroxysmal cough, and H. influenzae are gram-negative bacilli.<br>
+
+C Klebsiella pneumoniae is incorrect because infections do not present with a paroxysmal cough, and K. pneumoniae are gram-negative bacilli.<br>
+
+D Legionella pneumophila is incorrect because they are rarely able to be visualized by Gram stain, and infections do not present with a paroxysmal cough.<br>
+
+E Pseudomonas aeruginosa is incorrect because these infections are more often nosocomial or related to cystic fibrosis, which this patient does not have. Also, P. aeruginosa are gram-negative bacilli.<br></p>
+How was this infection most likely acquired?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Aerosol person to person</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Arthropod bite</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Ingestion of food</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Ingestion of water</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Sexual transmission</label><br> 
+</form> 
+Answer: <p style="color:white"> Transmission of B. pertussis from person-to-person occurs via aerosolized respiratory droplets. There are no identified animal or environmental reservoirs for this pathogen. Humans are the reservoir for B. pertussis. The incubation period is 7 to 10 days on average with a maximum of up to 20 days.<br>
+B Arthropod bite is incorrect because pertussis is not vector-borne.<br>
+C Ingestion of food is incorrect because pertussis is not food-borne.<br>
+D Ingestion of water is incorrect because pertussis is not water-borne.<br>
+E Sexual transmission is incorrect because pertussis is not sexually transmitted.</p><br>
+For the most likely causative agent, which of the following best describes the pathogenic mechanism leading to the clinical symptoms?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Activation of adenylate cyclase by disabling G<sub>i</sub></label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Cleavage of circulating IgA</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Inactivation of the 60S ribosome by cleavage of ribosomal RNA</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Inactivation of host EF2</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Prevention of the release of inhibitory NTs</label><br> 
+</form> 
+Answer: <p style="color:white"> Activation of adenylate cyclase by disabling Gi (A)<br>
+
+The virulence factors produced by B. pertussis include adherence to ciliated epithelial cells of the trachea and bronchi via pili and filamentous hemagglutinin, endotoxin, pertussis toxin, hemolysin, adenylate cyclase toxin, and tracheal cytotoxin. Pertussis toxin is an A-B5 exotoxin that is secreted by a type IV secretion system and binds to the G-alpha inhibitory subunit inhibiting signal transduction, resulting in increased cyclic adenosine monophosphate (cAMP) and a subsequent increase in mucus production and death of the host cell. This mechanism of action of the pertussis toxin mimics adenylate cyclase activity.<br>
+
+B Cleavage of circulating IgA is incorrect. The cleavage of IgA by bacterial proteases, such as in the case of H. influenzae, results in the impairment of antibody-induced entrapment of microbes in mucus secretions.<br>
+
+C Inactivation of the 60S ribosome by cleavage of rRNA is incorrect. This describes the mechanism of action of Shiga toxin.<br>
+
+D Toxin causing inactivation of host elongation factor 2 is incorrect. This describes the mechanism of action of P. aeruginosa exotoxin A.<br>
+
+E Toxin that prevents the release of inhibitory neurotransmitter is incorrect. This describes the mechanism of action of Clostridium botulinum.<br></p>  
+Which of the following best describes the vaccine currently available for prevention of this infection?<br>  
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. DNA vaccine</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Killed whole cell vaccine</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Live attenuated vaccine</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Recombinant vector vaccine</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Subunit vaccine</label><br>
+</form> 
+Answer: <p style="color:white"> Subunit vaccine (E)
+
+Prevention of infection is primarily by routine vaccination of infants, children, and adults. Though it was not mentioned explicitly, the patient was likely either unvaccinated or undervaccinated. Appropriate vaccination may have protected him from infection. The diphtheria, tetanus, and pertussis (DTap) vaccine in full strength is given to infants and children, while the reduced dose tetanus-diphtheria-pertussis (Tdap) vaccine is offered to teens and adults. The current vaccine for pertussis is an acellular subunit vaccine, consisting of inactivated pertussis toxin ± filamentous hemagglutinin (FHA), fimbriae, and pertactin (adhesin). The current vaccine does not give lifelong immunity, and boosting in adults is recommended by the Centers for Disease Control and Prevention (CDC) to help prevent transmission to children.<br>
+
+A DNA vaccine is incorrect. The pertussis vaccine is a subunit vaccine. There are no DNA vaccines approved for use in humans at present.<br>
+
+B Killed whole cell vaccine is incorrect. The pertussis vaccine is a subunit vaccine. An example of a killed whole cell vaccine is the previous pertussis vaccine, which is no longer used in the United States.<br>
+
+C Live attenuated vaccine is incorrect. The pertussis vaccine is a subunit vaccine. Example of a live attenuated vaccine is the MMR, nasal influenza, and chickenpox (varicella).<br>
+
+D Recombinant vector vaccine is incorrect. The pertussis vaccine is a subunit vaccine. There are no recombinant vector vaccines approved for use in humans at present.<br></p>
+The physician recommends a 5-day course of azithromycin, and the patient takes it appropriately. He returns to the office after completing the course of therapy complaining that his cough is unchanged. Which of the following is the best explanation that the physician can give for the lack of resolution of the cough?<br>
+ <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Azithromycin is not expected to clear this infection, but it was given because patients expect an antibiotic</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Coinfection with a second organism is common in this disease, and it is likely that administration of a second antibiotic is warranted</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. It is likely that the infection was resistant to azithromycin, and therapy will need to be altered</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. The purpose of the antibiotic was not to treat the symptoms of the disease but to reduce transmission of the organism</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. The standard dose of azithromycin was too low for this patient’s disease, and the dose will need to be doubled</label><br>
+</form> 
+Answer: <p style="color:white"> </p> 
+<i>Processes, replication, and genetics (eg, metabolism, growth, and regulation)</i><br>
   <i>Oncogenesis</i><br>
 <i>Antibacterial agents (eg, mechanisms of action on organism, toxicity to humans, and mechanisms of resistance)</i><br>
     <b>Viruses</b><br>
